--- a/src/email/orderComplete.mjml
+++ b/src/email/orderComplete.mjml
@@ -8,18 +8,38 @@
     <mj-section background-color="#FFFFFF" vertical-align="top" padding-bottom="0px" padding-top="0">
       <mj-column vertical-align="top" width="100%">
       
-        <mj-text align="left" color="#262626" font-size="40px" font-weight="bold" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-bottom="30px" padding-top="50px">Order Complete</mj-text>
+        <mj-text align="left" color="#262626" font-size="40px" font-weight="bold" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-bottom="30px" padding-top="50px">We've Received Your Order </mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#FFFFFF" padding-bottom="20px" padding-top="20px">
       <mj-column vertical-align="middle" width="100%">
-        <mj-text align="left" color="#262626" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">You have sucessfully placed an order for the following products 
-          <br /><br />
-           PRODUCTS: ${products}<br /><br />
-    your products will be delivered in 5 days</mj-text>
-                <mj-text align="left" color="#262626" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">Regards, <br /> The Youstore Team</mj-text>
+        <mj-text align="left" color="#262626" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px">Hello, Thanks for shopping on Youstore! Please find a summary of your recent purchase below </mj-text>
       </mj-column>
+      
     </mj-section>
+    <mj-section background-color="#FFFFFF" padding-bottom="20px" padding-top="10px">
+      <mj-column>
+        <mj-table>
+          <tr style="border-bottom:1px solid #ecedee;text-align:left;padding:15px 0;">
+            <th style="padding: 0 15px 0 0;">Product Name</th>
+            <th style="padding: 0 15px;">Quantity</th>
+            <th style="padding: 0 0 0 15px;">Price</th>
+          </tr>
+          <tr>
+            <td style="padding: 0 15px 0 0;">1995</td>
+            <td style="padding: 0 15px;">PHP</td>
+            <td style="padding: 0 0 0 15px;">C, Shell Unix</td>
+          </tr>
+          
+        </mj-table>
+         <mj-text align="left" color="#262626" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-top="25px">It usually takes up to two business days to process and ship your order, you'll
+         receive another mail from us once your order have been shipped. Your Order id is {{orderId}}
+         </mj-text>
+        <mj-text align="left" color="#262626" font-size="15px" font-family="open Sans Helvetica, Arial, sans-serif" padding-left="25px" padding-right="25px" padding-top="25px">Regards, <br /> The Youstore Team</mj-text>
+      </mj-column>
+
+    </mj-section>
+    
     <mj-section background-color="#1c94c8" padding-bottom="0px" padding-top="0">
       <mj-column vertical-align="middle">
         <mj-text align="center" font-size="20px" font-weight="bold" padding="0 25px" color="#FFFFFF">
