--- a/src/views/orderComplete.handlebars
+++ b/src/views/orderComplete.handlebars
@@ -221,7 +221,7 @@
                     </tr>
                     <tr>
                       <td align="left" style="font-size:0px;padding:10px 25px;padding-top:25px;padding-right:25px;padding-left:25px;word-break:break-word;">
-                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;">It usually takes up to two business days to process and ship your order, you'll receive another mail from us once your order have been shipped. Your Order id is <b>{{orderId}}</b></div>
+                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;">It usually takes up to two business days to process and ship your order, you'll receive another mail from us once your order have been shipped.</div>
                       </td>
                     </tr>
                     <tr>
