--- a/src/views/orderFailed.handlebars
+++ b/src/views/orderFailed.handlebars
@@ -221,7 +221,7 @@
                     </tr>
                     <tr>
                       <td align="left" style="font-size:0px;padding:10px 25px;padding-top:25px;padding-right:25px;padding-left:25px;word-break:break-word;">
-                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;"> You can initiate this order again by providing the order ID: <b>{{orderId}}</b></div>
+                        <div style="font-family:open Sans Helvetica, Arial, sans-serif;font-size:15px;line-height:1;text-align:left;color:#262626;"> You can initiate this order again by providing the order ID</div>
                       </td>
                     </tr>
                     <tr>
